fixing position:fixed on iOS
Come on Apple - why you gotta be so dumb?

--- a/assets/css/components/_team.scss
+++ b/assets/css/components/_team.scss
@@ -11,6 +11,7 @@
 .team-grid {
 	max-width: 240px;
 	padding:0;
+	transform: translate3d(0px,0px,0px);
 	@include respond($breakpoint-team-grid-small) {
 		max-width: 336px;	
 	}
